@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,6 +23,8 @@ import java.util.function.Function;
 
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.ConfigurableApplicationContext;
+import org.springframework.core.style.DefaultToStringStyler;
+import org.springframework.core.style.SimpleValueStyler;
 import org.springframework.core.style.ToStringCreator;
 import org.springframework.lang.Nullable;
 import org.springframework.test.annotation.DirtiesContext.HierarchyMode;
@@ -40,6 +42,7 @@ import org.springframework.util.StringUtils;
  * @author Rob Harrop
  * @since 4.0
  */
+@SuppressWarnings("serial")
 public class DefaultTestContext implements TestContext {
 
 	private static final long serialVersionUID = -5827157174866681233L;
@@ -123,13 +126,14 @@ public class DefaultTestContext implements TestContext {
 	public ApplicationContext getApplicationContext() {
 		ApplicationContext context = this.cacheAwareContextLoaderDelegate.loadContext(this.mergedContextConfiguration);
 		if (context instanceof ConfigurableApplicationContext cac) {
-			Assert.state(cac.isActive(), () ->
-					"The ApplicationContext loaded for [" + this.mergedContextConfiguration +
-					"] is not active. This may be due to one of the following reasons: " +
-					"1) the context was closed programmatically by user code; " +
-					"2) the context was closed during parallel test execution either " +
-					"according to @DirtiesContext semantics or due to automatic eviction " +
-					"from the ContextCache due to a maximum cache size policy.");
+			Assert.state(cac.isActive(), () -> """
+					The ApplicationContext loaded for %s is not active. \
+					This may be due to one of the following reasons: \
+					1) the context was closed programmatically by user code; \
+					2) the context was closed during parallel test execution either \
+					according to @DirtiesContext semantics or due to automatic eviction \
+					from the ContextCache due to a maximum cache size policy."""
+						.formatted(this.mergedContextConfiguration));
 		}
 		return context;
 	}
@@ -206,7 +210,7 @@ public class DefaultTestContext implements TestContext {
 		Assert.notNull(computeFunction, "Compute function must not be null");
 		Object value = this.attributes.computeIfAbsent(name, computeFunction);
 		Assert.state(value != null,
-				() -> String.format("Compute function must not return null for attribute named '%s'", name));
+				() -> "Compute function must not return null for attribute named '%s'".formatted(name));
 		return (T) value;
 	}
 
@@ -236,7 +240,7 @@ public class DefaultTestContext implements TestContext {
 	 */
 	@Override
 	public String toString() {
-		return new ToStringCreator(this)
+		return new ToStringCreator(this, new DefaultToStringStyler(new SimpleValueStyler()))
 				.append("testClass", this.testClass)
 				.append("testInstance", this.testInstance)
 				.append("testMethod", this.testMethod)
