@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,7 +26,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -88,7 +87,7 @@ public abstract class TestPropertySourceUtils {
 			// Convert all the merged annotations for the current aggregate
 			// level to a list of TestPropertySourceAttributes.
 			List<TestPropertySourceAttributes> aggregatedAttributesList =
-					aggregatedAnnotations.stream().map(TestPropertySourceAttributes::new).collect(Collectors.toList());
+					aggregatedAnnotations.stream().map(TestPropertySourceAttributes::new).toList();
 			// Merge all TestPropertySourceAttributes instances for the current
 			// aggregate level into a single TestPropertySourceAttributes instance.
 			TestPropertySourceAttributes mergedAttributes = mergeTestPropertySourceAttributes(aggregatedAttributesList);
@@ -131,8 +130,8 @@ public abstract class TestPropertySourceUtils {
 		boolean duplicationDetected =
 				(currentAttributes.equals(previousAttributes) && !currentAttributes.isEmpty());
 
-		if (duplicationDetected && logger.isDebugEnabled()) {
-			logger.debug(String.format("Ignoring duplicate %s declaration on %s since it is also declared on %s",
+		if (duplicationDetected && logger.isTraceEnabled()) {
+			logger.trace(String.format("Ignoring duplicate %s declaration on %s since it is also declared on %s",
 					currentAttributes, currentAttributes.getDeclaringClass().getName(),
 					previousAttributes.getDeclaringClass().getName()));
 		}
@@ -144,7 +143,7 @@ public abstract class TestPropertySourceUtils {
 		List<String> locations = new ArrayList<>();
 		for (TestPropertySourceAttributes attrs : attributesList) {
 			if (logger.isTraceEnabled()) {
-				logger.trace(String.format("Processing locations for TestPropertySource attributes %s", attrs));
+				logger.trace("Processing locations for " + attrs);
 			}
 			String[] locationsArray = TestContextResourceUtils.convertToClasspathResourcePaths(
 					attrs.getDeclaringClass(), true, attrs.getLocations());
@@ -160,7 +159,7 @@ public abstract class TestPropertySourceUtils {
 		List<String> properties = new ArrayList<>();
 		for (TestPropertySourceAttributes attrs : attributesList) {
 			if (logger.isTraceEnabled()) {
-				logger.trace(String.format("Processing inlined properties for TestPropertySource attributes %s", attrs));
+				logger.trace("Processing inlined properties for " + attrs);
 			}
 			String[] attrProps = attrs.getProperties();
 			properties.addAll(0, Arrays.asList(attrProps));
@@ -269,8 +268,8 @@ public abstract class TestPropertySourceUtils {
 		Assert.notNull(environment, "'environment' must not be null");
 		Assert.notNull(inlinedProperties, "'inlinedProperties' must not be null");
 		if (!ObjectUtils.isEmpty(inlinedProperties)) {
-			if (logger.isDebugEnabled()) {
-				logger.debug("Adding inlined properties to environment: " +
+			if (logger.isTraceEnabled()) {
+				logger.trace("Adding inlined properties to environment: " +
 						ObjectUtils.nullSafeToString(inlinedProperties));
 			}
 			MapPropertySource ps = (MapPropertySource)
